--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-ø<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -7,13 +7,14 @@
 </head>
 
 <body>
+
 <!--Header and Navigation-->
-<div class="dark-bg bottom-shadow">
+    <header class="bottom-shadow">
     	<div class="container container-overflow text-white">
         	<div class="container-header-left">
            		<h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
         	</div>
-            <div class="container-header-right">
+            <nav>
             	<ul class="menu-list">
                 	<li class="menu">
                     	<h4><a href="index.html">Home</a></h4>
@@ -25,11 +26,13 @@
                     	<h4><a href="experiments.html">Experiments</a></h4>
                     </li>
                 </ul>
-          	</div>
+          	</nav>
         </div>
-</div>
+    </header>
+<!--End Header and Navigation-->
+
 <!--Main Content-->
-<div class="container container-overflow">
+    <div class="container container-overflow">
     	<div class="contentleft">
             <div class="content-inner">
 				<h2>About Fran Levy</h2>
@@ -52,17 +55,21 @@
             </div>
 
         </div>
-</div>
+    </div>
+<!--End Main Content-->
+
 <!--Footer-->
-<div class="dark-bg">
-	<div class="container container-overflow text-white">
-            <div class="container-footer">
-            	<p class="footer-text">Copyright &copy; 2013 <a href="about.html">Fran Levy </a></p>
+    <footer>
+       <div class="container container-overflow">
+            <div class="footer-left">
+                <p class="footer-text">Copyright &copy; 2013 <a href="about.html">Fran Levy </a></p>
             </div>
             <div class="socialmedia">
-            	<p class="footer-text">Insert social media here</p>
+              <p class="footer-text">Insert social media here</p>
             </div>
-	</div>
-</div>
+       </div>
+    </footer>
+<!--End Footer-->
+
 </body>
 </html>
