--- a/about.html
+++ b/about.html
@@ -10,23 +10,23 @@
 
 <!--Header and Navigation-->
     <header class="bottom-shadow">
-    	<div class="container container-overflow text-white">
-        	<div class="container-header-left">
-           		<h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
-        	</div>
+        <div class="container container-overflow text-white">
+            <div class="header-left">
+                <h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
+            </div>
             <nav>
-            	<ul class="menu-list">
-                	<li class="menu">
-                    	<h4><a href="index.html">Home</a></h4>
+                <ul class="menu-list">
+                    <li class="menu">
+                        <h4><a href="index.html">Home</a></h4>
                     </li>
                     <li class="menu">
-                    	<h4><a href="about.html">About</a></h4>
+                        <h4><a href="about.html">About</a></h4>
                     </li>
-                	<li class="menu">
-                    	<h4><a href="experiments.html">Experiments</a></h4>
+                    <li class="menu">
+                        <h4><a href="experiments.html">Experiments</a></h4>
                     </li>
                 </ul>
-          	</nav>
+            </nav>
         </div>
     </header>
 <!--End Header and Navigation-->
