Changing the About page text.

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     	<div class="contentleft">
             <div class="content-inner">
 				<h2>About Fran Levy</h2>
-        	  	<p>I'm a former urban planner, seeking to make the world a better place. Realizing that I could achieve this goal in many different ways, I've redirected my energy to web development. My projects cover an ever-changing array of topics, but the common thread running through them all is the quest to improve people's lives in ways large and small.</p>
+        	  	<p>I'm an urban-planner-turned-web-developer, seeking to make the world a better place. My projects cover an ever-changing array of topics, but the common thread running through them all is the quest to improve people's lives in ways large and small.</p>
             </div>
         </div>
     	<div class="contentright">
