Created Blog page. Added blog page to site menu bar.

--- a/about.html
+++ b/about.html
@@ -25,6 +25,9 @@
                     <li class="menu">
                         <h4><a href="experiments.html">Experiments</a></h4>
                     </li>
+                    <li class="menu">
+                        <h4><a href="experiments.html">Blog</a></h4>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -62,7 +65,7 @@
     <footer>
        <div class="container container-overflow">
             <div class="footer-left">
-                <p class="footer-text">Copyright &copy; 2013 <a href="about.html">Fran Levy </a></p>
+                <p class="footer-text">Copyright &copy; 2013 Fran Levy. All rights reserved.</p>
             </div>
             <div class="socialmedia">
               <p class="footer-text">Insert social media here</p>
