--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>About | Fran's Starter League Adventures</title>
+<title>Home | Fran's Starter League Adventures</title>
 <link href="css/global.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -10,7 +10,7 @@
 
 <!--Header and Navigation-->
     <header class="bottom-shadow">
-    	<div class="container container-overflow text-white">
+        <div class="container container-overflow text-white">
         	<div class="header-left">
            		<h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
         	</div>
@@ -37,57 +37,38 @@
 <!--Main Content-->
     <div class="container container-overflow">
     	<div class="contentleft">
-        	<div class="content-inner">
-        		<h2>Experiments</h2>
-        	</div>
             <div class="content-inner">
-            	<h4>Buttons</h4>
-                <p>Soon you'll see some mighty fine lookin' buttons here. Check back later.</p>
+        		<h2>Fran&apos;s Starter League Blog</h2>
+                <p>Weeks 1-3: What I&apos;ve learned so far</p>
             </div>
-          <div class="content-inner">
-                <h4>Alert messages</h4>
-              	<ul class="inline-list">
-              		<li class="alert">
-                    For your information, this is an information alert message.</li>
-                    <li class="alert alert-error">
-                    Something is amiss. Try a different tactic.</li>
-                    <li class="alert alert-victory">
-                    Victory!</li>
-                    <li class="alert alert-warning">
-                    Danger, Will Robinson! Danger!</li>
-                </ul>
-        	</div>
-        	<div class="content-inner">
-        		<h4>Positioning</h4>
-                <p>This paragraph contains a few tooltip demonstrations. To see the tooltips, hover over the bolded text. Tooltips are useful for placing comments within a text, for providing definitions of particular words, or for demonstrating how impressive tooltips look in action.
-          That's right; you don't need a <em>reason</em> to use a tooltip. Tooltips are a reason unto themselves.</div>
         </div>
     	<div class="contentright">
         	<div class="content-inner content-inner-right">
               <p>Insert flattering <a href="about.html">photo</a> here.</p>
-        	  <h5 class="text-center">Fran Levy</h5>
+       	  <h5 class="text-center">Fran Levy</h5>
         	</div>
             <div class="content-inner content-inner-right">
-            Additional sidebar content goes here.
+                <h3>Weeks 1-3: What I've learned so far</h3>
             </div>
             <div class="content-inner content-inner-right">
-            And here.
+            Future entries coming soon
             </div>
             <div class="content-inner content-inner-right">
-            And maybe here.
+            Future entries coming soon
             </div>
+
         </div>
     </div>
 <!--End Main Content-->
 
 <!--Footer-->
     <footer>
-	   <div class="container container-overflow text-white">
+	   <div class="container container-overflow">
             <div class="footer-left">
                 <p class="footer-text">Copyright &copy; 2013 Fran Levy. All rights reserved.</p>
             </div>
             <div class="socialmedia">
-            	<p class="footer-text">Insert social media here</p>
+           	  <p class="footer-text">Insert social media here</p>
             </div>
 	   </div>
     </footer>
