--- a/experiments.html
+++ b/experiments.html
@@ -16,17 +16,17 @@
         	</div>
             <nav>
             	<ul class="menu-list">
-                	<li class="menu">
-                    	<h4><a href="index.html">Home</a></h4>
+                	<li>
+                    	<a href="index.html">Home</a>
                     </li>
-                    <li class="menu">
-                    	<h4><a href="about.html">About</a></h4>
+                    <li>
+                    	<a href="about.html">About</a>
                     </li>
-                	<li class="menu">
-                    	<h4><a href="experiments.html">Experiments</a></h4>
+                	<li>
+                    	<a class="active" href="experiments.html">Experiments</a>
                     </li>
-                    <li class="menu">
-                        <h4><a href="experiments.html">Blog</a></h4>
+                    <li>
+                        <a href="experiments.html">Blog</a>
                     </li>
                 </ul>
           	</nav>
