--- a/about.html
+++ b/about.html
@@ -15,18 +15,18 @@
                 <h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
             </div>
             <nav>
-                <ul class="menu-list">
-                    <li class="menu">
-                        <h4><a href="index.html">Home</a></h4>
+                <ul class="nav-list">
+                    <li>
+                        <a href="index.html">Home</a>
                     </li>
-                    <li class="menu">
-                        <h4><a href="about.html">About</a></h4>
+                    <li>
+                        <a class="active" href="about.html">About</a>
                     </li>
-                    <li class="menu">
-                        <h4><a href="experiments.html">Experiments</a></h4>
+                    <li>
+                        <a href="experiments.html">Experiments</a>
                     </li>
-                    <li class="menu">
-                        <h4><a href="experiments.html">Blog</a></h4>
+                    <li>
+                        <a href="blog.html">Blog</a>
                     </li>
                 </ul>
             </nav>
