--- a/experiments.html
+++ b/experiments.html
@@ -15,7 +15,7 @@
            		<h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
         	</div>
             <nav>
-            	<ul class="menu-list">
+            	<ul class="nav-list">
                 	<li>
                     	<a href="index.html">Home</a>
                     </li>
@@ -26,7 +26,7 @@
                     	<a class="active" href="experiments.html">Experiments</a>
                     </li>
                     <li>
-                        <a href="experiments.html">Blog</a>
+                        <a href="blog.html">Blog</a>
                     </li>
                 </ul>
           	</nav>
