--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
 
 <!--Header and Navigation-->
     <header class="bottom-shadow">
-        <div class="container container-overflow text-white">
-        	<div class="header-left">
-           		<h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
-        	</div>
+        <div class="container container-overflow">
+            <div class="header-left">
+                <h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
+            </div>
             <nav>
-            	<ul class="menu-list">
-                	<li class="menu">
-                    	<h4><a href="index.html">Home</a></h4>
+                <ul class="nav-list">
+                    <li>
+                        <a class="active" href="index.html">Home</a>
                     </li>
-                    <li class="menu">
-                    	<h4><a href="about.html">About</a></h4>
+                    <li>
+                        <a href="about.html">About</a>
                     </li>
-                	<li class="menu">
-                    	<h4><a href="experiments.html">Experiments</a></h4>
+                    <li>
+                        <a href="experiments.html">Experiments</a>
                     </li>
-                    <li class="menu">
-                        <h4><a href="experiments.html">Blog</a></h4>
+                    <li>
+                        <a href="blog.html">Blog</a>
                     </li>
                 </ul>
-          	</nav>
+            </nav>
         </div>
     </header>
 <!--End Header and Navigation-->
