Consolidated CSS groupings within the stylesheet for increased ease of use. Eliminated all .text-white and .text-black classes from CSS and HTML.

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 
 <!--Header and Navigation-->
     <header class="bottom-shadow">
-        <div class="container container-overflow text-white">
+        <div class="container container-overflow">
             <div class="header-left">
                 <h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
             </div>
