--- a/experiments.html
+++ b/experiments.html
@@ -82,7 +82,7 @@
 
 <!--Footer-->
     <footer>
-	   <div class="container container-overflow text-white">
+	   <div class="container container-overflow">
             <div class="footer-left">
                 <p class="footer-text">Copyright &copy; 2013 Fran Levy. All rights reserved.</p>
             </div>
