--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
 
 <!--Header and Navigation-->
     <header class="bottom-shadow">
-        <div class="container container-overflow text-white">
+        <div class="container container-overflow">
             <div class="header-left">
                 <h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
             </div>
@@ -39,7 +39,12 @@
     	<div class="contentleft">
             <div class="content-inner">
         		<h2>Fran&apos;s Starter League Blog</h2>
+            </div>
+            <div class="content-inner">
                 <p>Weeks 1-3: What I&apos;ve learned so far</p>
+            </div>
+            <div class="content-inner">
+                <p>My First Mentoring Session</p>
             </div>
         </div>
     	<div class="contentright">
@@ -48,10 +53,10 @@
        	  <h5 class="text-center">Fran Levy</h5>
         	</div>
             <div class="content-inner content-inner-right">
-                <h3>Weeks 1-3: What I've learned so far</h3>
+                <h3>Weeks 1-3: What I&apos;ve learned so far</h3>
             </div>
             <div class="content-inner content-inner-right">
-            Future entries coming soon
+                <h3>My First Mentoring Session</h3>
             </div>
             <div class="content-inner content-inner-right">
             Future entries coming soon
