Cleaned up CSS and HTML by including 'aside' elements. New problem now: active links within 'aside' elements no longer appear brown, they are all white (invisible against background).

--- a/experiments.html
+++ b/experiments.html
@@ -62,20 +62,20 @@
                 <p>This paragraph contains a few tooltip demonstrations. To see the tooltips, hover over the bolded text. Tooltips are useful for placing comments within a text, for providing definitions of particular words, or for demonstrating how impressive tooltips look in action.
           That's right; you don't need a <em>reason</em> to use a tooltip. Tooltips are a reason unto themselves.</div>
         </div>
-    	<div class="contentright">
-        	<div class="content-inner content-inner-right">
-              <p>Insert flattering <a href="about.html">photo</a> here.</p>
-        	  <h5 class="text-center">Fran Levy</h5>
-        	</div>
-            <div class="content-inner content-inner-right">
-            Additional sidebar content goes here.
-            </div>
-            <div class="content-inner content-inner-right">
-            And here.
-            </div>
-            <div class="content-inner content-inner-right">
-            And maybe here.
-            </div>
+       <div class="contentright">
+            <aside>
+                <p>Insert flattering <a href="about.html">photo</a> here.</p>
+                <p class="text-center">Fran Levy</p>
+            </aside>
+            <aside>
+                Additional sidebar content goes here.
+            </aside>
+            <aside>
+                And here.
+            </aside>
+            <aside>
+                And here.
+            </aside>
         </div>
     </div>
 <!--End Main Content-->
