--- a/about.html
+++ b/about.html
@@ -42,21 +42,20 @@
         	  	<p>I'm an urban-planner-turned-web-developer, seeking to make the world a better place. My projects cover an ever-changing array of topics, but the common thread running through them all is the quest to improve people's lives in ways large and small.</p>
             </div>
         </div>
-    	<div class="contentright">
-        	<div class="content-inner content-inner-right">
-              <p>Insert flattering <a href="about.html">photo</a> here.</p>
-        	  <h5 class="text-center">Fran Levy</h5>
-        	</div>
-            <div class="content-inner content-inner-right">
-            Additional sidebar content goes here.
-            </div>
-            <div class="content-inner content-inner-right">
-            And here.
-            </div>
-            <div class="content-inner content-inner-right">
-            And maybe here.
-            </div>
-
+       <div class="contentright">
+            <aside>
+                <p>Insert flattering <a href="about.html">photo</a> here.</p>
+                <p class="text-center">Fran Levy</p>
+            </aside>
+            <aside>
+                Additional sidebar content goes here.
+            </aside>
+            <aside>
+                And here.
+            </aside>
+            <aside>
+                And here.
+            </aside>
         </div>
     </div>
 <!--End Main Content-->
