--- a/blog.html
+++ b/blog.html
@@ -47,21 +47,20 @@
                 <p>My First Mentoring Session</p>
             </div>
         </div>
-    	<div class="contentright">
-        	<div class="content-inner content-inner-right">
-              <p>Insert flattering <a href="about.html">photo</a> here.</p>
-       	  <h5 class="text-center">Fran Levy</h5>
-        	</div>
-            <div class="content-inner content-inner-right">
-                <h3>Weeks 1-3: What I&apos;ve learned so far</h3>
-            </div>
-            <div class="content-inner content-inner-right">
-                <h3>My First Mentoring Session</h3>
-            </div>
-            <div class="content-inner content-inner-right">
-            Future entries coming soon
-            </div>
-
+        <div class="contentright">
+            <aside>
+                <p>Insert flattering <a href="about.html">photo</a> here.</p>
+                <p class="text-center">Fran Levy</p>
+            </aside>
+            <aside>
+                <h5>Weeks 1-3: What I&apos;ve learned so far</h5>
+            </aside>
+            <aside>
+                <h5>My First Mentoring Session</h5>
+            </aside>
+            <aside>
+                Future entries coming soon
+            </aside>
         </div>
     </div>
 <!--End Main Content-->
