--- a/index.html
+++ b/index.html
@@ -42,21 +42,20 @@
                 <p>Welcome to this chronicle of a Starter League student. This site serves as a showcase of my Advanced HTML/CSS class assignments and <a href="experiments.html">experiments</a>.</p>
             </div>
         </div>
-    	<div class="contentright">
-        	<div class="content-inner content-inner-right">
-              <p>Insert flattering <a href="about.html">photo</a> here.</p>
-       	  <h5 class="text-center">Fran Levy</h5>
-        	</div>
-            <div class="content-inner content-inner-right">
-            Additional sidebar content goes here.
-            </div>
-            <div class="content-inner content-inner-right">
-            And here.
-            </div>
-            <div class="content-inner content-inner-right">
-            And maybe here.
-            </div>
-
+        <div class="contentright">
+            <aside>
+                <p>Insert flattering <a href="about.html">photo</a> here.</p>
+                <p class="text-center">Fran Levy</p>
+            </aside>
+            <aside>
+                Additional sidebar content goes here.
+            </aside>
+            <aside>
+                And here.
+            </aside>
+            <aside>
+                And here.
+            </aside>
         </div>
     </div>
 <!--End Main Content-->
