Modifying font families, styles, and weights.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <!--Header and Navigation-->
-    <header class="bottom-shadow">
+    <header>
         <div class="container container-overflow">
             <div class="header-left">
                 <h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
@@ -39,7 +39,7 @@
     	<div class="contentleft">
             <div class="content-inner">
         		<h2>Here There Be CSS</h2>
-                <p>Welcome to this chronicle of a Starter League student. This site serves as a showcase of my Advanced HTML/CSS class assignments and <a href="experiments.html">experiments</a>.</p>
+                <p>Welcome to this chronicle of a Starter League student. This site serves as a showcase of my Advanced HTML/CSS class assignments and <a href="experiments.html">experiments</a>. To find out more about what I&apos;ve learned, check out my <a href="blog.html">blog.</a></p>
             </div>
         </div>
         <div class="contentright">
