--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
 
 <!--Header and Navigation-->
-    <header class="bottom-shadow">
+    <header>
         <div class="container container-overflow">
             <div class="header-left">
                 <h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
@@ -39,7 +39,7 @@
     	<div class="contentleft">
             <div class="content-inner">
 				<h2>About Fran Levy</h2>
-        	  	<p>I'm an urban-planner-turned-web-developer, seeking to make the world a better place. My projects cover an ever-changing array of topics, but the common thread running through them all is the quest to improve people's lives in ways large and small.</p>
+        	  	<p>I'm an urban-planner-turned-web-developer, seeking to make the world a better place. My projects cover a variety of topics, but the common thread running through them is the quest to improve people's lives in ways large and small.</p>
             </div>
         </div>
        <div class="contentright">
