--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
 <body>
 
 <!--Header and Navigation-->
-    <header class="bottom-shadow">
+    <header>
         <div class="container container-overflow">
             <div class="header-left">
                 <h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
@@ -41,10 +41,10 @@
         		<h2>Fran&apos;s Starter League Blog</h2>
             </div>
             <div class="content-inner">
-                <p>Weeks 1-3: What I&apos;ve learned so far</p>
+                <h3>Weeks 1-3: What I&apos;ve learned so far</h3>
             </div>
             <div class="content-inner">
-                <p>My First Mentoring Session</p>
+                <h3>My First Mentoring Session</h3>
             </div>
         </div>
         <div class="contentright">
@@ -53,10 +53,10 @@
                 <p class="text-center">Fran Levy</p>
             </aside>
             <aside>
-                <h5>Weeks 1-3: What I&apos;ve learned so far</h5>
+                <h4>Weeks 1-3: What I&apos;ve learned so far</h4>
             </aside>
             <aside>
-                <h5>My First Mentoring Session</h5>
+                <h4>My First Mentoring Session</h4>
             </aside>
             <aside>
                 Future entries coming soon
