--- a/experiments.html
+++ b/experiments.html
@@ -9,7 +9,7 @@
 <body>
 
 <!--Header and Navigation-->
-    <header class="bottom-shadow">
+    <header>
     	<div class="container container-overflow text-white">
         	<div class="header-left">
            		<h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
@@ -41,11 +41,11 @@
         		<h2>Experiments</h2>
         	</div>
             <div class="content-inner">
-            	<h4>Buttons</h4>
+            	<h3>Buttons</h3>
                 <p>Soon you'll see some mighty fine lookin' buttons here. Check back later.</p>
             </div>
           <div class="content-inner">
-                <h4>Alert messages</h4>
+                <h3>Alert messages</h3>
               	<ul class="inline-list">
               		<li class="alert">
                     For your information, this is an information alert message.</li>
@@ -58,7 +58,7 @@
                 </ul>
         	</div>
         	<div class="content-inner">
-        		<h4>Positioning</h4>
+        		<h3>Positioning</h3>
                 <p>This paragraph contains a few tooltip demonstrations. To see the tooltips, hover over the bolded text. Tooltips are useful for placing comments within a text, for providing definitions of particular words, or for demonstrating how impressive tooltips look in action.
           That's right; you don't need a <em>reason</em> to use a tooltip. Tooltips are a reason unto themselves.</div>
         </div>
