Added green stripe to header container background. Updated footer CSS (color, text size and color, and widths).

--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
 
 <!--Header and Navigation-->
     <header>
-        <div class="container container-overflow">
+        <div class="container container-header">
             <div class="header-left">
                 <h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
             </div>
@@ -35,7 +35,7 @@
 <!--End Header and Navigation-->
 
 <!--Main Content-->
-    <div class="container container-overflow">
+    <div class="container">
     	<div class="contentleft">
             <div class="content-inner">
         		<h2>Fran&apos;s Starter League Blog</h2>
@@ -67,7 +67,7 @@
 
 <!--Footer-->
     <footer>
-	   <div class="container container-overflow">
+	   <div class="container">
             <div class="footer-left">
                 <p class="footer-text">Copyright &copy; 2013 Fran Levy. All rights reserved.</p>
             </div>
