--- a/experiments.html
+++ b/experiments.html
@@ -35,7 +35,7 @@
 <!--End Header and Navigation-->
 
 <!--Main Content-->
-    <div class="container container-overflow">
+    <div class="container">
     	<div class="contentleft">
         	<div class="content-inner">
         		<h2>Experiments</h2>
@@ -82,7 +82,7 @@
 
 <!--Footer-->
     <footer>
-	   <div class="container container-overflow">
+	   <div class="container">
             <div class="footer-left">
                 <p class="footer-text">Copyright &copy; 2013 Fran Levy. All rights reserved.</p>
             </div>
