--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <!--Header and Navigation-->
     <header>
-        <div class="container container-overflow">
+        <div class="container container-header">
             <div class="header-left">
                 <h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
             </div>
@@ -35,7 +35,7 @@
 <!--End Header and Navigation-->
 
 <!--Main Content-->
-    <div class="container container-overflow">
+    <div class="container">
     	<div class="contentleft">
             <div class="content-inner">
         		<h2>Here There Be CSS</h2>
@@ -62,12 +62,12 @@
 
 <!--Footer-->
     <footer>
-	   <div class="container container-overflow">
+	   <div class="container">
             <div class="footer-left">
-                <p class="footer-text">Copyright &copy; 2013 Fran Levy. All rights reserved.</p>
+                <p>Copyright &copy; 2013 Fran Levy. All rights reserved.</p>
             </div>
             <div class="socialmedia">
-           	  <p class="footer-text">Insert social media here</p>
+           	  <p>Insert social media here</p>
             </div>
 	   </div>
     </footer>
