--- a/experiments.html
+++ b/experiments.html
@@ -10,7 +10,7 @@
 
 <!--Header and Navigation-->
     <header>
-    	<div class="container container-overflow text-white">
+    	<div class="container container-header">
         	<div class="header-left">
            		<h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
         	</div>
