Changed some font sizes, letter spacings, and header gradients. Removed the word 'Copyright' from before the copyright symbol in the footer. Still need to change footer background gradient to better match header.

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
     <footer>
        <div class="container">
             <div class="footer-left">
-                <p class="footer-text">Copyright &copy; 2013 Fran Levy. All rights reserved.</p>
+                <p class="footer-text">&copy; 2013 Fran Levy. All rights reserved.</p>
             </div>
             <div class="socialmedia">
               <p class="footer-text">Insert social media here</p>
