--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <!--Header and Navigation-->
-    <header>
+    <header class="bottom-shadow">
         <div class="container container-header">
             <div class="header-left">
                 <h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
@@ -65,7 +65,7 @@
     <footer>
 	   <div class="container">
             <div class="footer-left">
-                <p>Copyright &copy; 2013 Fran Levy. All rights reserved.</p>
+                <p>&copy; 2013 Fran Levy. All rights reserved.</p>
             </div>
             <div class="socialmedia">
            	  <p>Insert social media here</p>
