--- a/experiments.html
+++ b/experiments.html
@@ -10,7 +10,7 @@
 <body>
 
 <!--Header and Navigation-->
-    <header>
+    <header class="bottom-shadow">
     	<div class="container container-header">
         	<div class="header-left">
            		<h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
