Added different inner shadows to header, main content, and footer sections.

--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
 <body>
 
 <!--Header and Navigation-->
-    <header class="bottom-shadow">
+    <header>
         <div class="container container-header">
             <div class="header-left">
                 <h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
@@ -36,32 +36,34 @@
 <!--End Header and Navigation-->
 
 <!--Main Content-->
-    <div class="container">
-    	<div class="contentleft">
-            <div class="content-inner">
-        		<h2>Fran&apos;s Starter League Blog</h2>
+    <div class="inner-shadow">
+        <div class="container">
+        	<div class="contentleft">
+                <div class="content-inner">
+            		<h2>Fran&apos;s Starter League Blog</h2>
+                </div>
+                <div class="content-inner">
+                    <h3>Weeks 1-3: What I&apos;ve learned so far</h3>
+                </div>
+                <div class="content-inner">
+                    <h3>My First Mentoring Session</h3>
+                </div>
             </div>
-            <div class="content-inner">
-                <h3>Weeks 1-3: What I&apos;ve learned so far</h3>
+            <div class="contentright">
+                <aside>
+                    <p>Insert flattering <a href="about.html">photo</a> here.</p>
+                    <p class="text-center">Fran Levy</p>
+                </aside>
+                <aside>
+                    <h4>Weeks 1-3: What I&apos;ve learned so far</h4>
+                </aside>
+                <aside>
+                    <h4>My First Mentoring Session</h4>
+                </aside>
+                <aside>
+                    Future entries coming soon
+                </aside>
             </div>
-            <div class="content-inner">
-                <h3>My First Mentoring Session</h3>
-            </div>
-        </div>
-        <div class="contentright">
-            <aside>
-                <p>Insert flattering <a href="about.html">photo</a> here.</p>
-                <p class="text-center">Fran Levy</p>
-            </aside>
-            <aside>
-                <h4>Weeks 1-3: What I&apos;ve learned so far</h4>
-            </aside>
-            <aside>
-                <h4>My First Mentoring Session</h4>
-            </aside>
-            <aside>
-                Future entries coming soon
-            </aside>
         </div>
     </div>
 <!--End Main Content-->
