--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <!--Header and Navigation-->
-    <header class="bottom-shadow">
+    <header>
         <div class="container container-header">
             <div class="header-left">
                 <h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
@@ -36,27 +36,29 @@
 <!--End Header and Navigation-->
 
 <!--Main Content-->
-    <div class="container">
-    	<div class="contentleft">
-            <div class="content-inner">
-        		<h2>Here There Be CSS</h2>
-                <p>Welcome to this chronicle of a Starter League student. This site serves as a showcase of my Advanced HTML/CSS class assignments and <a href="experiments.html">experiments</a>. To find out more about what I&apos;ve learned, check out my <a href="blog.html">blog.</a></p>
+    <div class="maincontent">
+        <div class="container">
+        	<div class="contentleft">
+                <div class="content-inner">
+            		<h2>Here There Be CSS</h2>
+                    <p>Welcome to this chronicle of a Starter League student. This site serves as a showcase of my Advanced HTML/CSS class assignments and <a href="experiments.html">experiments</a>. To find out more about what I&apos;ve learned, check out my <a href="blog.html">blog.</a></p>
+                </div>
             </div>
-        </div>
-        <div class="contentright">
-            <aside>
-                <p>Insert flattering <a href="about.html">photo</a> here.</p>
-                <p class="text-center">Fran Levy</p>
-            </aside>
-            <aside>
-                Additional sidebar content goes here.
-            </aside>
-            <aside>
-                And here.
-            </aside>
-            <aside>
-                And here.
-            </aside>
+            <div class="contentright">
+                <aside>
+                    <p>Insert flattering <a href="about.html">photo</a> here.</p>
+                    <p class="text-center">Fran Levy</p>
+                </aside>
+                <aside>
+                    Additional sidebar content goes here.
+                </aside>
+                <aside>
+                    And here.
+                </aside>
+                <aside>
+                    And here.
+                </aside>
+            </div>
         </div>
     </div>
 <!--End Main Content-->
