--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
 
 <!--Header and Navigation-->
-    <header class="bottom-shadow">
+    <header>
         <div class="container container-header">
             <div class="header-left">
                 <h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
@@ -36,27 +36,29 @@
 <!--End Header and Navigation-->
 
 <!--Main Content-->
-    <div class="container">
-    	<div class="contentleft">
-            <div class="content-inner">
-				<h2>About Fran Levy</h2>
-        	  	<p>I'm an urban-planner-turned-web-developer, seeking to make the world a better place. My projects cover a variety of topics, but the common thread running through them is the quest to improve people's lives in ways large and small.</p>
+    <div class="inner-shadow">   
+        <div class="container">
+        	<div class="contentleft">
+                <div class="content-inner">
+    				<h2>About Fran Levy</h2>
+            	  	<p>I'm an urban-planner-turned-web-developer, seeking to make the world a better place. My projects cover a variety of topics, but the common thread running through them is the quest to improve people's lives in ways large and small.</p>
+                </div>
             </div>
-        </div>
-       <div class="contentright">
-            <aside>
-                <p>Insert flattering <a href="about.html">photo</a> here.</p>
-                <p class="text-center">Fran Levy</p>
-            </aside>
-            <aside>
-                Additional sidebar content goes here.
-            </aside>
-            <aside>
-                And here.
-            </aside>
-            <aside>
-                And here.
-            </aside>
+           <div class="contentright">
+                <aside>
+                    <p>Insert flattering <a href="about.html">photo</a> here.</p>
+                    <p class="text-center">Fran Levy</p>
+                </aside>
+                <aside>
+                    Additional sidebar content goes here.
+                </aside>
+                <aside>
+                    And here.
+                </aside>
+                <aside>
+                    And here.
+                </aside>
+            </div>
         </div>
     </div>
 <!--End Main Content-->
