--- a/experiments.html
+++ b/experiments.html
@@ -10,7 +10,7 @@
 <body>
 
 <!--Header and Navigation-->
-    <header class="bottom-shadow">
+    <header>
     	<div class="container container-header">
         	<div class="header-left">
            		<h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
@@ -36,47 +36,49 @@
 <!--End Header and Navigation-->
 
 <!--Main Content-->
-    <div class="container">
-    	<div class="contentleft">
-        	<div class="content-inner">
-        		<h2>Experiments</h2>
-        	</div>
-            <div class="content-inner">
-            	<h3>Buttons</h3>
-                <p>Soon you'll see some mighty fine lookin' buttons here. Check back later.</p>
+    <div class="inner-shadow"
+        <div class="container">
+        	<div class="contentleft">
+            	<div class="content-inner">
+            		<h2>Experiments</h2>
+            	</div>
+                <div class="content-inner">
+                	<h3>Buttons</h3>
+                    <p>Soon you'll see some mighty fine lookin' buttons here. Check back later.</p>
+                </div>
+              <div class="content-inner">
+                    <h3>Alert messages</h3>
+                  	<ul class="inline-list">
+                  		<li class="alert">
+                        For your information, this is an information alert message.</li>
+                        <li class="alert alert-error">
+                        Something is amiss. Try a different tactic.</li>
+                        <li class="alert alert-victory">
+                        Victory!</li>
+                        <li class="alert alert-warning">
+                        Danger, Will Robinson! Danger!</li>
+                    </ul>
+            	</div>
+            	<div class="content-inner">
+            		<h3>Positioning</h3>
+                    <p>This paragraph contains a few tooltip demonstrations. To see the tooltips, hover over the bolded text. Tooltips are useful for placing comments within a text, for providing definitions of particular words, or for demonstrating how impressive tooltips look in action.
+              That's right; you don't need a <em>reason</em> to use a tooltip. Tooltips are a reason unto themselves.</div>
             </div>
-          <div class="content-inner">
-                <h3>Alert messages</h3>
-              	<ul class="inline-list">
-              		<li class="alert">
-                    For your information, this is an information alert message.</li>
-                    <li class="alert alert-error">
-                    Something is amiss. Try a different tactic.</li>
-                    <li class="alert alert-victory">
-                    Victory!</li>
-                    <li class="alert alert-warning">
-                    Danger, Will Robinson! Danger!</li>
-                </ul>
-        	</div>
-        	<div class="content-inner">
-        		<h3>Positioning</h3>
-                <p>This paragraph contains a few tooltip demonstrations. To see the tooltips, hover over the bolded text. Tooltips are useful for placing comments within a text, for providing definitions of particular words, or for demonstrating how impressive tooltips look in action.
-          That's right; you don't need a <em>reason</em> to use a tooltip. Tooltips are a reason unto themselves.</div>
-        </div>
-       <div class="contentright">
-            <aside>
-                <p>Insert flattering <a href="about.html">photo</a> here.</p>
-                <p class="text-center">Fran Levy</p>
-            </aside>
-            <aside>
-                Additional sidebar content goes here.
-            </aside>
-            <aside>
-                And here.
-            </aside>
-            <aside>
-                And here.
-            </aside>
+           <div class="contentright">
+                <aside>
+                    <p>Insert flattering <a href="about.html">photo</a> here.</p>
+                    <p class="text-center">Fran Levy</p>
+                </aside>
+                <aside>
+                    Additional sidebar content goes here.
+                </aside>
+                <aside>
+                    And here.
+                </aside>
+                <aside>
+                    And here.
+                </aside>
+            </div>
         </div>
     </div>
 <!--End Main Content-->
