Corrected HTML typo on Experiments page. Made other minor adjustments.

--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,7 @@
 <!--End Header and Navigation-->
 
 <!--Main Content-->
-    <div class="inner-shadow">
+    <div class="maincontent">
         <div class="container">
         	<div class="contentleft">
                 <div class="content-inner">
