More modifications in CSS to prepare for responsive layout coding.

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <header>
         <div class="container container-header">
             <div class="header-left">
-                <h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
+                <h1> <a href="index.html">Fran's CSS Adventures</a></h1>
             </div>
             <nav>
                 <ul class="nav-list">
@@ -36,7 +36,7 @@
 <!--End Header and Navigation-->
 
 <!--Main Content-->
-    <div class="maincontent">   
+    <div class="maincontent">
         <div class="container">
         	<div class="contentleft">
                 <div class="content-inner">
@@ -67,10 +67,10 @@
     <footer>
        <div class="container">
             <div class="footer-left">
-                <p class="footer-text">&copy; 2013 Fran Levy. All rights reserved.</p>
+                <p>&copy; 2013 Fran Levy. All rights reserved.</p>
             </div>
             <div class="socialmedia">
-              <p class="footer-text">Insert social media here</p>
+              <p>Insert social media here</p>
             </div>
        </div>
     </footer>
