--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<link href='http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600,600italic,700,700italic|IM+Fell+English:400italic,400' rel='stylesheet' type='text/css'>   
+<link href='http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600,600italic,700,700italic|IM+Fell+English:400italic,400' rel='stylesheet' type='text/css'>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Home | Fran's Starter League Adventures</title>
 <link href="css/global.css" rel="stylesheet" type="text/css" />
@@ -13,7 +13,7 @@
     <header>
         <div class="container container-header">
             <div class="header-left">
-                <h1> <a href="index.html">Fran's Starter League Adventures</a></h1>
+                <h1> <a href="index.html">Fran's CSS Adventures</a></h1>
             </div>
             <nav>
                 <ul class="nav-list">
@@ -65,14 +65,14 @@
 
 <!--Footer-->
     <footer>
-	   <div class="container">
+       <div class="container">
             <div class="footer-left">
                 <p>&copy; 2013 Fran Levy. All rights reserved.</p>
             </div>
             <div class="socialmedia">
-           	  <p>Insert social media here</p>
+              <p>Insert social media here</p>
             </div>
-	   </div>
+       </div>
     </footer>
 <!--End Footer-->
 
