--- a/haml-sass-exercises/index.html
+++ b/haml-sass-exercises/index.html
@@ -3,7 +3,7 @@
 <head>
   <link>
   <meta>
-  <title>Home | Fran's CSS Adventures</title>
+  <title>Home | Fran&apos;s CSS Adventures</title>
   <link>
 </head>
 <body>
@@ -33,7 +33,6 @@
       </nav>
     </div>
   </header>
-  <!-- End Header and Navigation -->
   <!-- Main Content -->
   <div class='maincontent'>
     <div class='container'>
@@ -73,7 +72,6 @@
       </div>
     </div>
   </div>
-  <!-- End Main Content -->
   <!-- Footer -->
   <footer>
     <div class='container'>
@@ -89,5 +87,4 @@
       </div>
     </div>
   </footer>
-  <!-- End Footer -->
 </body>
