Found way to add green stripe to header using an 'inner-border' class with 'inner-border: before'. Also added inner-shadow mixins, but for some reason, the  argument of 0 isn't recognized.

--- a/experiments.html
+++ b/experiments.html
@@ -3,14 +3,14 @@
 <head>
 <link href='http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,700|IM+Fell+English:400,400italic' rel='stylesheet' type='text/css'>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>About | Fran's CSS Adventures</title>
+<title>Experiments | Fran's CSS Adventures</title>
 <link href="css/global.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 
 <!--Header and Navigation-->
-    <header>
+    <header class="inner-border">
     	<div class="container container-header">
         	<div class="header-left">
            		<h1> <a href="index.html">Fran's CSS Adventures</a></h1>
