--- a/haml-sass-exercises/index.html
+++ b/haml-sass-exercises/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- Header and Navigation -->
-  <header>
+  <header class='inner-border'>
     <div class='container container-header'>
       <div class='header-left'>
         <h1>
