Header font changes, Sass variable modifications. Fixed a couple of errors in Haml and Sass.

--- a/experiments.html
+++ b/experiments.html
@@ -10,7 +10,7 @@
 <body>
 
 <!--Header and Navigation-->
-    <header class="inner-border">
+    <header class="stripe">
     	<div class="container container-header">
         	<div class="header-left">
            		<h1> <a href="index.html">Fran's CSS Adventures</a></h1>
@@ -44,7 +44,7 @@
             	</div>
                 <div class="content-inner">
                 	<h3>Buttons</h3>
-                    <p>Soon you'll see some mighty fine lookin' buttons here. Check back later.</p>
+                    <p>Soon you'll see some mighty fine-lookin' buttons here. Check back later.</p>
                 </div>
               <div class="content-inner">
                     <h3>Alert messages</h3>
