Re-structured file folders to eliminate the haml-sass-exercises folder. The original old global.css file has been replaced with the global.css file written from Sass.

--- a/experiments.html
+++ b/experiments.html
@@ -83,8 +83,8 @@
           <section class='content-inner'>
             <h3>Positioning</h3>
             <p>
-              This paragraph contains a few tooltip demonstrations. To see the tooltips, hover over the <a href="#">underlined text.
-              <span class='tooltip'>
+              This paragraph contains a few tooltip demonstrations. To see the tooltips, hover over the <a class="tooltip" href="#">underlined text.
+              <span>
                 I'm a tooltip!
               </span>
               </a>
@@ -94,7 +94,7 @@
               </span>
               </a> within a text, for providing <a href="#">definitions
               <span class='tooltip'>
-                Defition: The formal statement of the meaning or significance of a word, phrase, idiom, etc., as found in dictionaries.
+                Definition: The formal statement of the meaning or significance of a word, phrase, idiom, etc., as found in dictionaries.
               </span>
               </a> of particular words, or for demonstrating how <a href="#">impressive
               <span class='tooltip'>
