--- a/experiments.html
+++ b/experiments.html
@@ -88,16 +88,16 @@
                 I'm a tooltip!
               </span>
               </a>
-              Tooltips are useful for placing <a href="#">comments
-              <span class='tooltip'>
+              Tooltips are useful for placing <a class="tooltip" href="#">comments
+              <span>
                 I have no comment at this time.
               </span>
-              </a> within a text, for providing <a href="#">definitions
-              <span class='tooltip'>
-                Definition: The formal statement of the meaning or significance of a word, phrase, idiom, etc., as found in dictionaries.
+              </a> within a text, for providing <a class="tooltip" href="#">definitions
+              <span>
+                But how do you give a definition of "definition"?
               </span>
-              </a> of particular words, or for demonstrating how <a href="#">impressive
-              <span class='tooltip'>
+              </a> of particular words, or for demonstrating how <a class="tooltip" href="#">impressive
+              <span>
                 Aren't you impressed?
               </span>
               </a> tooltips look in action. That's right; you don't need a
