Changed header and tooltip brown to a new 'lighter-brown' variable in the 'global.css' file, so that they better match the footer, which appears lighter for some reason. Fixed javascript source code in 'experiments.haml' and 'index.haml' to begin with an 'http:' in the address. The .js file now works, but the command needs to be fixed so that it closes the alert messages one at a time. Fixed the unwanted tooltip inheritance of 'a-link' properties from 'content-inner a' by adding an 'a' in front of the '.tooltip' class. Tried out a few shadow effects on the tooltip boxes, but nonelooked right with the arrow beneath them, so left it shadow-free. Changed the sans-serif font of the site from Verdana to Tahoma, and increased letter-spacing for sans-serif and serif-body fonts (this spacing only appears at high zoom levels, though).

--- a/experiments.html
+++ b/experiments.html
@@ -83,12 +83,11 @@
           <section class='content-inner'>
             <h3>Positioning</h3>
             <p>
-              This paragraph contains a few tooltip demonstrations. To see the tooltips, hover over the <a class="tooltip" href="#">underlined text.
+              This paragraph contains a few tooltip demonstrations. To see the tooltips, hover over the <a class="tooltip" href="#">underlined text
               <span>
-                I'm a tooltip!
+                Look, it's a tooltip!
               </span>
-              </a>
-              Tooltips are useful for placing <a class="tooltip" href="#">comments
+              </a>. Tooltips are useful for placing <a class="tooltip" href="#">comments
               <span>
                 I have no comment at this time.
               </span>
@@ -150,7 +149,7 @@
         </div>
       </div>
     </footer>
-    <script src='//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js'></script>
+    <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js'></script>
     <script src='js/script.js'></script>
   </body>
 </html>
