--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
       </div>
     </footer>
-    <script src='//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js'></script>
+    <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js'></script>
     <script src='js/script.js'></script>
   </body>
 </html>
