Created new haml (and html) About page. Tried and failed to attach footer to page bottom, so I'm trying again by first creating a box shadow below the header and above the footer. This will hopefully allow the footer to move down to the bottom of the browser window (when I figure out how to do that) without showing the end of the 'main content' div box. But I'm stuck on how to add a drop shadow to the header and footer without overriding the inner shadow on these two elements. I tried to create a new mixin, but it's not working properly yet. I'm asking for help on Lantern and will keep trying.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class='contentright'>
           <aside>
             <p>
-              Insert flattering <a href="about.html">photo</a> here.
+              Insert flattering photo here.
             </p>
             <p class='text-center'>
               Fran Levy
