Created new 'images' folder for textured background and future items. Trying to make each page body into the new footer (and matching header) background to give the illusion of the footer reaching to the bottom of the page. This will make the footer look very tall on pages with little content, but my Starter League instructors have confirmed that this is the best way to maintain a height-flexible footer that appears to reach to the bottom of the screen. So far, the inner shadows I've applied to the body tag are sticking to the header and footer containers instead of the body. But happily, the outer shadow applied to the main content div acts as the 4th side's inner shadow of the header and footer.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <section class='content-inner'>
             <h2>Here There Be CSS</h2>
             <p>
-              Welcome to this chronicle of a Starter League student. This site serves as a showcase of my Advanced HTML/CSS class assignments and
+              Come and read the thriling chronicles of a Starter League student. This site provides a place to implement my Advanced HTML/CSS class
               <a href="experiments.html">experiments</a>. To find out more about what I&apos;ve learned, check out my <a href="blog.html">blog</a>.
             </p>
           </section>
@@ -75,20 +75,18 @@
       </div>
     </div>
     <!-- Footer -->
-    <footer>
-      <div class='container'>
-        <div class='footer-left'>
-          <p>
-            &copy; 2013 Fran Levy. All rights reserved.
-          </p>
-        </div>
-        <div class='socialmedia'>
-          <p>
-            Insert social media here
-          </p>
-        </div>
+    <div class='container footer'>
+      <div class='footer-left'>
+        <p>
+          &copy; 2013 Fran Levy. All rights reserved.
+        </p>
       </div>
-    </footer>
+      <div class='socialmedia'>
+        <p>
+          Insert social media here
+        </p>
+      </div>
+    </div>
     <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js'></script>
     <script src='js/script.js'></script>
   </body>
